--- a/package.json
+++ b/package.json
@@ -209,6 +209,7 @@
     "testRegex": "tests/.*\\.test\\.js$"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-polyfill": "6.20.0",
     "chalk": "1.1.3",
     "compression": "1.6.2",
@@ -219,9 +220,11 @@
     "intl": "1.2.5",
     "invariant": "2.2.2",
     "ip": "1.1.4",
-    "lodash": "4.17.2",
+    "jwt-decode": "^2.1.0",
+    "lodash": "^4.17.4",
     "minimist": "1.2.0",
     "react": "15.4.1",
+    "react-cookie": "^1.0.4",
     "react-dom": "15.4.1",
     "react-helmet": "3.2.2",
     "react-intl": "2.1.5",
@@ -232,6 +235,7 @@
     "redux": "3.6.0",
     "redux-immutable": "3.0.8",
     "redux-saga": "0.14.0",
+    "redux-thunk": "^2.2.0",
     "reselect": "2.5.4",
     "sanitize.css": "4.1.0",
     "styled-components": "1.1.2",
